# regularization_tools

./: .gitignore  README.md  pyproject.toml
examples/: ridge.py
src/regularization_tools/: core.py
tests/: cond.py  ridge.py  tikhonov.py
